@@ -2,6 +2,7 @@
 		- Fix for shellmeta
 		- Added _system function
 		- Added bashReadLine function
+		- Added cmdArgs function
 
 1.01	2016-12-21
 		- Package name changed to Lazy::Utils
